# Small-world-paper

./: .gitignore  CITATION.cff  GITHUB_UPLOAD.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: abide_surrogate_computation.py  abide_surrogate_validation.py  basc122_atlas_surface.py  biological_heatmaps_and_boxplots.py  circular_agreement.py  fmri_basc122_pipeline.py  fmri_download_basc122_export.py  logistic_map_regimes.py  merged_barplots.py  representation_similarity.py  statistical_tests.py  summary_all_plots.py  synthetic_generators_and_robustness.py
code_py/: 01_synthetic_generators_and_robustness.py  02_logistic_map_regimes.py  03_fmri_basc122_pipeline.py  04_fmri_download_basc122_export.py  05_basc122_atlas_surface.py  10_emg_plantar_pipeline.py  11_ecg_physionet_pipeline.py  11b_ecg_three_datasets.py  11c_ecg_nsrdb_sinus.py  12_cap_sleep_pipeline.py  13_respiratory_aeration_pipeline.py  14_fieldtrip_meg_pipeline.py  14b_ds000117_meg.py  14c_meg_ds_final.py  14d_meg.py  20_abide_surrogate_computation.py  21_abide_surrogate_validation.py  30_statistical_tests.py  30b_statistical_tests_alt.py  30c_statistical_heatmaps.py  31_biological_heatmaps_and_boxplots.py  31b_boxplot_final.py  31c_boxplot_ecg.py  31d_boxplot_emg.py  31e_boxplot_sleep.py  31f_boxplot_aeration.py  32_merged_barplots.py  33_circular_agreement.py  34_representation_similarity.py  35_summary_all_plots.py  36_paired_violin_sigma.py  README.md
scripts/: run_cap_sleep.py  run_ecg_physionet.py  run_emg_plantar.py  run_fieldtrip_meg.py  run_resp_aeration.py
src/smallworld_qtn/: __init__.py  network_metrics.py  pipeline.py  representations.py
src/smallworld_qtn/preprocessing/: __init__.py  cap_sleep.py  common.py  (+4 more)
tests/: test_core.py
