[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallworld-qtn"
version = "0.1.0"
description = "QG, GAF and MTF representations for small-world topology in biological time series"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scipy", "networkx", "requests", "joblib", "tqdm"]

[tool.setuptools.packages.find]
where = ["src"]
